start of regression chapter

--- a/content/00_Preface.ipynb
+++ b/content/00_Preface.ipynb
@@ -57,7 +57,7 @@
     "- Chapter 5: Finished.\n",
     "- Chapter 6: Finished.\n",
     "- Chapter 7: Work in progress.\n",
-    "- Chapter 8: Not available.\n",
+    "- Chapter 8: Work in progress.\n",
     "- Chapter 9: Not available.\n",
     "- Chapter 10: Not available.\n",
     "- Chapter 11: Not available.\n",
