finished regression overview

--- a/content/08_Regression.ipynb
+++ b/content/08_Regression.ipynb
@@ -229,13 +229,22 @@
     "\n",
     "### Performance Metrics\n",
     "\n",
-    "$$MAE = \\frac{1}{|X|} \\sum_{x \\in X} |e_x|$$\n",
+    "There are also several performance metrics that can be used to assess the quality of regression models. These metrics are based on the residuals. \n",
     "\n",
-    "$$MSE = \\frac{1}{|X|} \\sum{x \\in X} e_x^2$$\n",
+    "| Metric | Description | Definition |\n",
+    "|--------|-------------|------------|\n",
+    "| Mean Absolute Error | The arithmetic mean of the absolute residuals, i.e., the mean absolute deviation of the predictions from the actual values. | $MAE = \\frac{1}{|X|} \\sum_{x \\in X} |e_x|$ |\n",
+    "| Mean Squared Error | The arithmetic mean of the squared residuals. | $MSE = \\frac{1}{|X|} \\sum{x \\in X} e_x^2$ |\n",
+    "| R Squared, R2, $R^2$ | The coefficient of determination, which is defined as the fraction of the variance of the data that is explained by the regression model. | $R^2 = 1 - \\frac{\\sum_{x \\in X} (y-f(x))^2}{\\sum{x \\in X} (y-mean(y))^2} = 1 - \\frac{\\sum_{x \\in X} e_x^2}{\\sum{x \\in X} (y-mean(y))^2}$\n",
+    "| Adjusted R Squared | Adjustment of $R^2$ that takes the model complexity into account | $\\bar{R}^2 = 1 - (1-R^2)\\frac{|X|-1}{|X|-m-1}$ |\n",
     "\n",
-    "$$R^2 = 1 - \\frac{\\sum_{x \\in X} (y-f(x))^2}{\\sum{x \\in X} (y-mean(y))^2}$$\n",
+    "The MAE measures the absolute difference between the predictions and the actual values. The similar measure MSE uses the squared distances instead of the actual distances. Because the MSE uses the squared residuals, it is more sensitive to outliers in the residuals than MAE. Thus, MSE increases strongly with outliers, while these may be hidden with MAE. The biggest problem with MAE and MSE is that both are absolute measures for the error and, thus, hard to interpret because there is no fixed reference point. The performance measures for classification were mostly distributed in the interval [0,1] and it was clear what a perfect result looks like and what the worst possible result looks like. To interpret MAE and MSE, detailed knowledge about the dependent variable is required, especially about the scale of the dependent variable and the meaning of differences. \n",
     "\n",
-    "$$\\bar{R}^2 = 1 - (1-R^2)\\frac{|X|-1}{|X|-m-1}$$"
+    "In that respect, $R^2$ is more similar to the metrics we know from classification and is distributed in the interval [0,1], where 1 is a perfect value. $R^2$ answers the question how much better the regression function is than just using the arithmetic mean of the data. The sum in the denominator is over the residuals of the arithmetic mean as the regression function. In the nominator, we have the sum of the residuals of the regression. If we would divide both the nominator and denominator by $|X|$, we would have the MSE as nominator and the variance as denominator. In other words, $R^2$ measures the ratio of MSE the model and the variance of the dependent variable. The lower the MSE in relation to the variance, the better.\n",
+    "\n",
+    "A weakness of $R^2$ is that this usually decreases with more features, which can lead to overfitting. Adjusted $R^2$ addresses this weakness by taking the number of features into account. Thus, if the decrease in MSE is less than the penalty of adjusted $R^2$ for the number of features, adjusted $R^2$ increases. \n",
+    "\n",
+    "We now look at the values of these performance metrics for our example. "
    ]
   },
   {
@@ -282,6 +291,15 @@
     "print('MSE:         %.2f' % mean_squared_error(Y_exp, Y_exp_pred))\n",
     "print('R2:          %.2f' % r2_score(Y_exp, Y_exp_pred))\n",
     "print('Adjusted R2: %.2f' % adjusted_r2_score(Y_exp, Y_exp_pred, n, 1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We directly observe the problem with MAE and MSE: because we have randomly generated data, MAE and MSE have no real meaning for us. We only see that the values of the bad result are larger than the values for the good result: about 60% higher for MAE and about 3 times higher for MSE. Please note that the values for MSE are less than the values for MAE, because $x^2 < x$ for $x \\in (0,1)$. This further emphasizes that the interpretation of MAE and MSE is difficult. \n",
+    "\n",
+    "For $R^2$ we also see that the value of the good result is much larger than of the bad result. The bad result explains only about 2/3 of the variance, while the good result explains almost 90%. Adjusted $R^2$ is not different, because we only have a single feature. "
    ]
   },
   {
