--- a/content/08_Regression.ipynb
+++ b/content/08_Regression.ipynb
@@ -233,10 +233,10 @@
     "\n",
     "| Metric | Description | Definition |\n",
     "|--------|-------------|------------|\n",
-    "| Mean Absolute Error | The arithmetic mean of the absolute residuals, i.e., the mean absolute deviation of the predictions from the actual values. | $MAE = \\frac{1}{n} \\sum_{i=1}^n |e_{x_i}|$ |\n",
+    "| Mean Absolute Error | The arithmetic mean of the absolute residuals, i.e., the mean absolute deviation of the predictions from the actual values. | $MAE = \\frac{1}{n} \\sum_{i=1}^n \\vert e_{x_i}|$ |\n",
     "| Mean Squared Error | The arithmetic mean of the squared residuals. | $MSE = \\frac{1}{n} \\sum_{i=1}^n e_{x_i}^2$ |\n",
-    "| R Squared, R2, $R^2$ | The coefficient of determination, which is defined as the fraction of the variance of the data that is explained by the regression model. | $R^2 = 1 - \\frac{\\sum_{i=1}^n (y_i-f(x_i))^2}{\\sum_{i=1}^n (y_i-mean(Y))^2} = 1 - \\frac{\\sum_{i=1}^n e_{x_i}^2}{\\sum{x \\in X} (y-mean(y))^2}$\n",
-    "| Adjusted R Squared | Adjustment of $R^2$ that takes the model complexity into account | $\\bar{R}^2 = 1 - (1-R^2)\\frac{|X|-1}{|X|-m-1}$ |\n",
+    "| R Squared, R2, $R^2$ | The coefficient of determination, which is defined as the fraction of the variance of the data that is explained by the regression model. | $R^2 = 1 - \\frac{\\sum_{i=1}^n (y_i-f(x_i))^2}{\\sum_{i=1}^n (y_i-mean(Y))^2} = 1 - \\frac{\\sum_{i=1}^n e_{x_i}^2}{\\sum_{i=1}^n (y_i-mean(Y))^2}$\n",
+    "| Adjusted R Squared | Adjustment of $R^2$ that takes the model complexity into account | $\\bar{R}^2 = 1 - (1-R^2)\\frac{n-1}{n-m-1}$ |\n",
     "\n",
     "The MAE measures the absolute difference between the predictions and the actual values. The similar measure MSE uses the squared distances instead of the actual distances. Because the MSE uses the squared residuals, it is more sensitive to outliers in the residuals than MAE. Thus, MSE increases strongly with outliers, while these may be hidden with MAE. The biggest problem with MAE and MSE is that both are absolute measures for the error and, thus, hard to interpret because there is no fixed reference point. The performance measures for classification were mostly distributed in the interval [0,1] and it was clear what a perfect result looks like and what the worst possible result looks like. To interpret MAE and MSE, detailed knowledge about the dependent variable is required, especially about the scale of the dependent variable and the meaning of differences. \n",
     "\n",
