--- a/content/08_Regression.ipynb
+++ b/content/08_Regression.ipynb
@@ -233,7 +233,7 @@
     "\n",
     "| Metric | Description | Definition |\n",
     "|--------|-------------|------------|\n",
-    "| Mean Absolute Error | The arithmetic mean of the absolute residuals, i.e., the mean absolute deviation of the predictions from the actual values. | $MAE = \\frac{1}{n} \\sum_{i=1}^n \\vert e_{x_i}|$ |\n",
+    "| Mean Absolute Error | The arithmetic mean of the absolute residuals, i.e., the mean absolute deviation of the predictions from the actual values. | $MAE = \\frac{1}{n} \\sum_{i=1}^n \\vert e_{x_i} \\vert$ |\n",
     "| Mean Squared Error | The arithmetic mean of the squared residuals. | $MSE = \\frac{1}{n} \\sum_{i=1}^n e_{x_i}^2$ |\n",
     "| R Squared, R2, $R^2$ | The coefficient of determination, which is defined as the fraction of the variance of the data that is explained by the regression model. | $R^2 = 1 - \\frac{\\sum_{i=1}^n (y_i-f(x_i))^2}{\\sum_{i=1}^n (y_i-mean(Y))^2} = 1 - \\frac{\\sum_{i=1}^n e_{x_i}^2}{\\sum_{i=1}^n (y_i-mean(Y))^2}$\n",
     "| Adjusted R Squared | Adjustment of $R^2$ that takes the model complexity into account | $\\bar{R}^2 = 1 - (1-R^2)\\frac{n-1}{n-m-1}$ |\n",
