description of OLS

--- a/content/08_Regression.ipynb
+++ b/content/08_Regression.ipynb
@@ -308,7 +308,53 @@
    "source": [
     "## Linear Regression\n",
     "\n",
+    "We already encountered linear regression, e.g., in [Chapter 7](07_Classification) when we discussed Logistic Regression or in the example above. We now take a closer look at how linear regression works. The formula of the regression function of linear regression is\n",
+    "\n",
+    "$$y = b_0 + b_1x_1 + ... + b_mx_m = b_0 + \\sum_{i=1}^m b_ix_i$$\n",
+    "\n",
+    "with *coefficients* $b_1, ..., b_m \\in \\mathbb{R}$ and the *intercept* $b_0$. The coefficients define how a feature influences the dependent variable. The coefficients are closely related to the correlation between the dependent variable and the features. Usually, a positive coefficient means that the feature is positively correlated to the dependent variable, a negative coefficient means that there is a negative correlation. However, there are also exceptions to this general rule, as we will see in the next sections. \n",
+    "\n",
+    "The intercept is \"base value\" of the dependent variable, i.e., the value of the dependent variable if all features would be zero. This concept can be visualized as the location where a regression line *intercepts* the axis of the coordinate system. \n",
+    "\n",
+    "The key aspect of Linear Regression is how the coefficients and intercept are determined, as this can affect not only the quality of the regression function, but also how the coefficients may be interpreted. \n",
+    "\n",
     "### Ordinary Least Squares\n",
+    "\n",
+    "The standard way to estimate the coefficients of linear regression is using the *Ordinary Least Squares* (OLS) method. For this, we interpret the instance as matrix and the dependent variables and coefficients as vectors:\n",
+    "\n",
+    "$$\n",
+    "\\begin{split}\n",
+    "X &= \\begin{pmatrix}\n",
+    "x_{1,1} & \\dots & x_{1,m} \\\\\n",
+    "\\vdots & \\ddots & \\vdots \\\\\n",
+    "x_{n,1} & \\dots & x_{n,m} \n",
+    "\\end{pmatrix} \\\\\n",
+    "y &= (y_1, \\dots, y_n) \\\\\n",
+    "b &= (b_1, \\dots, b_m)\n",
+    "\\end{split}$$\n",
+    "\n",
+    "Because of this, we can use matrix multiplication to calculate all the predictions given a set of coefficients as a single vector, i.e., \n",
+    "\n",
+    "$$f(X) = b_0 + Xb.$$\n",
+    "\n",
+    "Since we want to minimize the residuals, we can formulate this as an optimization problem\n",
+    "\n",
+    "$$\\min ||f(X) - f^*(X)||_2^2 = \\min ||b_0 + Xb - y||_2^2.$$\n",
+    "\n",
+    "Hence, we minimize the square of the Euclidean norm (see [Chapter 6](06_Clustering.html#Measuring-Similarity)), in other words we are looking for the solution with the *least squares*.\n",
+    "\n",
+    "Because we have more instances than features (otherwise we have too many features), there are usually multiple optimal solutions for this optimization problem. While these solutions are the same with respect to the OLS, there can be interesting effects if the features are correlated with each other. This can be demonstrated with an example. \n",
+    "\n",
+    "Consider two features $x_1, x_2$ and a dependent variable $y$ such that $y = x_1 = x_2$. Here are some examples for optimal solutions:\n",
+    "\n",
+    "- $b_0 = 0, b_1=0.5, b_2=0.5$\n",
+    "- $b_0 = 0, b_1=1, b_2=0$\n",
+    "- $b_0 = 0, b_1=0, b_2=1$\n",
+    "- $b_0 = 0, b_1=10000, b_2=-9999$\n",
+    "\n",
+    "In general, any solution with $b_0=0$ and $b_1+b_2=1$ is optimal. The first three solutions we listed seem reasonable. However, a solution with very large coefficients is also possible and optimal. This also demonstrates that the coefficients of features can be misleading in terms correlation with the dependent variable, because in the example above $b_1$ and $b_2$ can assume any real value and, thus indicate any possible correlation. \n",
+    "\n",
+    "In the following, we show how OLS can be modified with *regularization* to find the first three solutions and avoid the problems with correlated features. \n",
     "\n",
     "### Ridge\n",
     "\n",
