added regression exercise

--- a/content/Exercises.ipynb
+++ b/content/Exercises.ipynb
@@ -13,7 +13,8 @@
     "- [Data Exploration with Descriptive Statistics and Visualizations](exercises/Exercise_Data_Exploration)\n",
     "- [Association Rule Mining](exercises/Exercise_Association_Rule_Mining)\n",
     "- [Clustering](exercises/Exercise_Clustering)\n",
-    "- [Classification](exercises/Exercise_Classification)"
+    "- [Classification](exercises/Exercise_Classification)\n",
+    "- [Regression](exercises/Exercise_Regression)"
    ]
   }
  ],
