solution for regression exercise

--- a/content/Solutions.ipynb
+++ b/content/Solutions.ipynb
@@ -12,7 +12,8 @@
     "- [Data Exploration with Descriptive Statistics and Visualizations](exercises/Solution_Data_Exploration)\n",
     "- [Association Rule Mining](exercises/Solution_Association_Rule_Mining)\n",
     "- [Clustering](exercises/Solution_Clustering)\n",
-    "- [Classification](exercises/Solution_Classification)"
+    "- [Classification](exercises/Solution_Classification)\n",
+    "- [Regression](exercises/Solution_Regression)"
    ]
   }
  ],
