--- a/content/00_Preface.ipynb
+++ b/content/00_Preface.ipynb
@@ -56,7 +56,7 @@
     "- Chapter 4: Finished.\n",
     "- Chapter 5: Finished.\n",
     "- Chapter 6: Finished.\n",
-    "- Chapter 7: Draft finished, requires proof reading.\n",
+    "- Chapter 7: Finished.\n",
     "- Chapter 8: Draft finished, requires proof reading.\n",
     "- Chapter 9: Not available.\n",
     "- Chapter 10: Not available.\n",
