start of time series analysis

--- a/content/00_Preface.ipynb
+++ b/content/00_Preface.ipynb
@@ -58,7 +58,7 @@
     "- Chapter 6: Finished.\n",
     "- Chapter 7: Finished.\n",
     "- Chapter 8: Draft finished, requires proof reading.\n",
-    "- Chapter 9: Not available.\n",
+    "- Chapter 9: Work in progress.\n",
     "- Chapter 10: Not available.\n",
     "- Chapter 11: Not available.\n",
     "- Chapter 12: Not available.\n",
