fix typos and further improve AR,MA,ARMA

--- a/content/09_Time-Series-Analysis.ipynb
+++ b/content/09_Time-Series-Analysis.ipynb
@@ -16,7 +16,7 @@
     "\n",
     "<img src=\"images/timeseries_abstract.png\" alt=\"Example for Classification\" style=\"width: 500px;\"/>\n",
     "\n",
-    "Our data are values at enumerated points in time. The time series model describes how the data changes over time. This problem is related to regression: if we where to say that the time is our feature and the value at that time is our dependent variable, we would have a very simple time series analysis.\n",
+    "Our data are values at enumerated points in time. The time series model describes how the data changes over time. This problem is related to regression: if we were to say that the time is our feature and the value at that time is our dependent variable, we would have a very simple time series analysis.\n",
     "\n",
     "### The Formal Problem\n",
     "\n",
@@ -230,7 +230,7 @@
     "\n",
     "The second approach for modeling the trend and seasonality is based on *differencing*. Differencing is similar to the derivative of a function and more powerful than the adjustment through regression and seasonal means. The idea behind differencing is that the trend is nothing more than the slope of the time series. The slope is nothing more than the first derivative of the time series. If the trend of the time series is not constant, but changes over time, this would be the second order derivative. Thus, if we want to remove the trend, we can use the derivative to do this. \n",
     "\n",
-    "With differencing, this idea is implement this with a variant of the *point slope equation*, which can be used to estimate the slope of a line. The slope between two points $(x_1, y_1), (x_2, y_2)$ is defined as $\\frac{y_2-y_1}{x_2-x_1}$. We use that we have equidistant time steps $t$, i.e., to points next to each other in the time series are $(t-1, x_{t-1}), (t, x_t)$ and the slope is\n",
+    "With differencing, this idea is to implement this with a variant of the *point slope equation*, which can be used to estimate the slope of a line. The slope between two points $(x_1, y_1), (x_2, y_2)$ is defined as $\\frac{y_2-y_1}{x_2-x_1}$. We use that we have equidistant time steps $t$, i.e., to points next to each other in the time series are $(t-1, x_{t-1}), (t, x_t)$ and the slope is\n",
     "\n",
     "$$\\frac{x_t-x_{t-1}}{t-(t-1)} = \\frac{x_t-x_{t-1}}{1} = x_t-x_{t-1}.$$\n",
     "\n",
@@ -365,7 +365,7 @@
     "\n",
     "> Note:\n",
     ">\n",
-    "> *Auto* means *self* in latin, i.e., we have the latin meaning and not the often used short form of automatic. If these are mixed up in this case, this does not make sense and can be confusing. \n",
+    "> *Auto* means *self* in Latin, i.e., we have the Latin meaning and not the short form of automatic. If these are mixed up in this case, this does not make sense and can be confusing. \n",
     "\n",
     "What the autocorrelation is can be visualized with scatterplots. Below, we visualize the relationship between the time steps of the time series for our running example with both variants of detrending and seasonal adjustment. "
    ]
@@ -417,7 +417,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The plots in the first column show the relationship with the next time step, the second column two time steps into the future, and the third column three time steps into the future. With the Linear Regression and the seaonal means, we see that there is a linear relationship between $x_t$ and $x_t+1$, which gets weaker with $x_{t+2}$ and vanishes with $x_{t+3}$. This relationship is the autocorrelation of the time series. In the second row, we see that there does not seem to be any autocorrelation within the time series where we used differencing. The relationship between the different time steps looks completely random.\n",
+    "The plots in the first column show the relationship with the next time step, the second column two time steps into the future, and the third column three time steps into the future. With the Linear Regression and the seasonal means, we see that there is a linear relationship between $x_t$ and $x_t+1$, which gets weaker with $x_{t+2}$ and vanishes with $x_{t+3}$. This relationship is the autocorrelation of the time series. In the second row, we see that there does not seem to be any autocorrelation within the time series where we used differencing. The relationship between the different time steps looks completely random.\n",
     "\n",
     "The plots of the autocorrelation above ignore one important aspect: \n",
     "\n",
@@ -425,7 +425,7 @@
     "- $x_{t+1}$ is correlated with $x_{t}$\n",
     "- How much of the correlation between $x_{t+2}$ and $x_{t}$ is already explained by the indirect correlation between $x_{t+2}$ and $x_{t}$ though $x_{t+1}$? \n",
     "\n",
-    "The issue is that there is *carry over* between the different points in the time series. While this is hard to parse with the mathematical notation, the meaning of this gets clearer with an example. If the number of passengers in March are correlated with the value in February, and the value in February is correlated with the value in January, than January the value of January has an indirect impact on March, because it has an impact on February. Thus, some of the correlation between January and February carries over to March. \n",
+    "The issue is that there is *carry over* between the different points in the time series. While this is hard to parse with the mathematical notation, the meaning of this gets clearer with an example. If the number of passengers in March are correlated with the value in February, and the value in February is correlated with the value in January, then January the value of January has an indirect impact on March, because it has an impact on February. Thus, some of the correlation between January and February carries over to March. \n",
     "\n",
     "However, there may also be *direct* correlation between January and March. This direct correlation is called *partial autocorrelation*. The partial autocorrelation is the autocorrelation without the carryover, i.e., only the direct correlation without the carry over.\n",
     "\n",
@@ -478,26 +478,29 @@
     "\n",
     "The second row of the plot shows the autocorrelation and partial autocorrelation for the time series where we used differencing for the adjustments. As we already saw above, there is no correlation between the time steps, both in the autocorrelation and the partial autocorrelation. This observation is the same as we had with the scatterplots. \n",
     "\n",
-    "### ARMA Models\n",
+    "### AR, MA and ARMA\n",
     "\n",
-    "What we are still missing is a way to model the autocorrelation. An often used approach is to use *AutoRegressive* (AR) and/or *Moving Average* (MA) models. If both are used together, this is an ARMA model. \n",
+    "What we are still missing is a way to model the autocorrelation. An common approach is to use *AutoRegressive* (AR) or *Moving Average* (MA) models. If both are used together, this is an ARMA model. \n",
     "\n",
     "The AR models model a linear relationship between the timesteps. They model the *direct* influence of the past points $p$ in time on the current point in time as\n",
     "\n",
-    "$$a_0 + \\sum_{i=1}^p a_ix_{t-i}.$$\n",
+    "$$c + \\epsilon_t \\sum_{i=1}^p a_ix_{t-i}$$\n",
     "\n",
-    "Thus, we have coefficients that determine how strong the influence of the past values is on the current value.\n",
+    "where $c \\in \\mathbb{R}$ is a constant change over time, $\\epsilon_t$ is *white noise*, and $a_i \\in \\mathbb{R}, i=1, ..., p$ are coefficients that determine the influence past values of the time series. Thus, the AR model combines a fixed change $c$, with a random change $\\epsilon_t$ and the last $p$ values of the time series. \n",
+    "\n",
+    "> Note: \n",
+    ">\n",
+    "> White noise are random variables with an expected value of 0. This means that in the expectation, the white noise does not influence mean value of time series. Usually, the white noise is modeled by normal distributions with a mean value of 0 and a small standard deviation. \n",
     "\n",
     "The MA models are *random*, i.e., they are used to model how random effects influence the values of the time series and are defined as\n",
     "\n",
-    "$$\\epsilon_t + \\sum_{j=1}^q b_j \\epsilon_{t-j}$$\n",
+    "$$c + \\epsilon_t + \\sum_{j=1}^q b_j \\epsilon_{t-j}$$\n",
     "\n",
-    "where $\\epsilon_t$ is *white noise*. White noise are random variables with an expected value of 0. This means that in the expectation, the white noise does not influence mean value of time series. Usually, the white noise is modeled by normal distributions with a mean value of 0 and a small standard deviation. The first part of the MA model ($\\epsilon_t$) is the random fluctuation of the values of the time series at time $t$. The second part of the MA model ($\\sum_{j=1}^q b_j \\epsilon_{t-j}$ is the influence of the past noise on the next value. For example, a random increase in air passengers in January may mean that there is a decrease of passengers in February. This would be modeled with a negative coefficient for $b_1$ in the MA model. \n",
-    "\n",
+    "$c$ and $\\epsilon_t$ are the same as for the AR model. The second part of the MA model ($\\sum_{j=1}^q b_j \\epsilon_{t-j}$ is the influence of the past noise on the next value. For example, a random increase in air passengers in January may mean that there is a decrease of passengers in February. This would be modeled with a negative coefficient for $b_1$ in the MA model. \n",
     "\n",
     "When we combine the AR with the MA, we get the ARMA model for the autocorrelation, which is defined as\n",
     "\n",
-    "$$x_t = a_0 + \\sum_{i=1}^p a_ix_{t-i} + \\epsilon_t + \\sum_{j=1}^q b_j \\epsilon_{t-j}.$$\n",
+    "$$x_t = c + \\epsilon_t + \\sum_{i=1}^p a_ix_{t-i} + \\sum_{j=1}^q b_j \\epsilon_{t-j}.$$\n",
     "\n",
     "In the ARMA model we combine the influence of past values through the coefficients of the AR part of the model, with the influence of random fluctuations.\n",
     "\n",
@@ -543,7 +546,7 @@
    "source": [
     "Since the AR part of the model is the direct influence of past values of the time series, we can use the partial autocorrelation to estimate suitable values. In this case, $p=1$ or $p=13$ would be suitable, as this would capture all values that seem to have a direct impact on the current estimate. With $p=1$ we have a small model, whereas we would get a relatively large model with $p=13$. The large model should be more accurate, because residual seasonal effect is captured, but the model would not be easy to interpret. Moreover, there would be a higher risk of overfitting. \n",
     "\n",
-    "For the MA part, we are interested in how long we can see the effect of random fluctations in the model. For time series that can be fully described with an MA term, the value of $q$ can be determined with the autocorrelation, because this tends to zero after $q$ steps. Thus, we could just look at when the autocorrelation goes towards zero and use this for $q$. This seems to be the case after three full seasons, i.e., at $q=36$. However, this ignores that we also the the direct impact of the prior values of the time series of the AR part. For example, the autocorrelation between at $t+1$ is also covered by the partial autocorrelation, most of the autocorrelation at time $t+12$ as well. If we account for this, the impact of the random fluctuations is relatively small. Thus, a suitable for $q$ could also be $q=1$ or $q=12$, depending on the choice of $p$.\n",
+    "For the MA part, we are interested in how long we can see the effect of random fluctuations in the model. For time series that can be fully described with an MA term, the value of $q$ can be determined with the autocorrelation, because this tends to zero after $q$ steps. Thus, we could just look at when the autocorrelation goes towards zero and use this for $q$. This seems to be the case after three full seasons, i.e., at $q=36$. However, this ignores that we also the the direct impact of the prior values of the time series of the AR part. For example, the autocorrelation between at $t+1$ is also covered by the partial autocorrelation, most of the autocorrelation at time $t+12$ as well. If we account for this, the impact of the random fluctuations is relatively small. Thus, a suitable for $q$ could also be $q=1$ or $q=12$, depending on the choice of $p$.\n",
     "\n",
     "Together, this means that there are three good candidates for $p$ and $q$:\n",
     "\n",
