finished first draft of time series analysis

--- a/content/09_Time-Series-Analysis.ipynb
+++ b/content/09_Time-Series-Analysis.ipynb
@@ -592,6 +592,15 @@
    "source": [
     "In this case, we observe no strong partial autocorrelations, i.e., $p=0$ is because there is no direct impact of the past values on the current values. In the autocorrelations, we see that the first value is with about -0.3 notable, afterwards this tends to zero. As we explained above, this means that $q=1$ is a suitable choice. "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### ARIMA\n",
+    "\n",
+    "Often, you will also find ARIMA models for time series analysis. ARIMA models have the parameter $p, d, q$. ARIMA is the same as ARMA, where $d$-th order differencing is applied to the data. Thus, ARIMA is the same as detrending with differencing and then creating an ARMA model. "
+   ]
   }
  ],
  "metadata": {
