added time series exercise

--- a/content/Exercises.ipynb
+++ b/content/Exercises.ipynb
@@ -14,7 +14,8 @@
     "- [Association Rule Mining](exercises/Exercise_Association_Rule_Mining)\n",
     "- [Clustering](exercises/Exercise_Clustering)\n",
     "- [Classification](exercises/Exercise_Classification)\n",
-    "- [Regression](exercises/Exercise_Regression)"
+    "- [Regression](exercises/Exercise_Regression)\n",
+    "- [Time Series Analysis](exercises/Exercise_Time_Series_Analysis)"
    ]
   }
  ],
