added solution for time series exercise

--- a/content/Solutions.ipynb
+++ b/content/Solutions.ipynb
@@ -13,7 +13,8 @@
     "- [Association Rule Mining](exercises/Solution_Association_Rule_Mining)\n",
     "- [Clustering](exercises/Solution_Clustering)\n",
     "- [Classification](exercises/Solution_Classification)\n",
-    "- [Regression](exercises/Solution_Regression)"
+    "- [Regression](exercises/Solution_Regression)\n",
+    "- [Time Series Analysis](exercises/Solution_Time_Series_Analysis)"
    ]
   }
  ],
